finish the "show user detail" requirement

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -437,7 +437,7 @@ table img.wrong {
 #table2 tbody tr td:nth-child(2),
 #table3 tbody tr td:nth-child(1),
 #table4 tbody tr td:nth-child(1),
-#table6 tbody tr td:nth-child(1) {
+#table6 tbody tr td:nth-child(2) {
   color: #4178BE;
   cursor: pointer;
   white-space: nowrap;
@@ -564,21 +564,42 @@ table img.wrong {
 
 
 /*table6*/
+#table6 {
+  position: relative;
+}
 
-#table6 thead tr th:nth-child(2),
+#table6 thead tr th:nth-child(1){
+  width: 14px;
+  text-align: center;
+}
+
 #table6 thead tr th:nth-child(3),
 #table6 thead tr th:nth-child(4),
 #table6 thead tr th:nth-child(5),
+#table6 thead tr th:nth-child(7),
 #table6 thead tr th:nth-child(6) {
   text-align: center;
 }
 
-#table6 tbody tr td:nth-child(2),
 #table6 tbody tr td:nth-child(3),
 #table6 tbody tr td:nth-child(4),
 #table6 tbody tr td:nth-child(5),
+#table6 tbody tr td:nth-child(7),
 #table6 tbody tr td:nth-child(6) {
   text-align: center;
+}
+
+#table6 p.emailUsers {
+  position: absolute;
+  left: 220px;
+  top: -10px;
+  z-index: 100;
+}
+
+#table6 p.emailUsers button.disabled {
+  background-color: #ececec;
+  border: 2px solid #ececec;
+  color: #777677;
 }
 
 .hoverTDiv {
@@ -854,6 +875,11 @@ div.tableDivChild.showThisTableFilter div.tableDivFilter div.filterSwitch a:nth-
   color: #777677;
 }
 
+.copyAddressBtn[disabled=true] {
+  pointer-events: none;
+  color: #777677;
+}
+
 #rawData {
   display: none;
   position: fixed;
@@ -980,4 +1006,41 @@ div.tableDivChild.showThisTableFilter div.tableDivFilter div.filterSwitch a:nth-
 
 #loadingMockupSpinner p.ibm-ind-link a.ibm-textcolor-blue-30 {
   padding-left: 0
+}
+
+#userDetailOverlay>div:nth-child(2) {
+  height: 300px;
+  overflow: scroll;
+}
+
+#userDetailOverlay>div:nth-child(2) div {
+  padding: 2px 0;
+}
+
+#userDetailOverlay>div:nth-child(2) div>span:first-child {
+  width: 200px;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#userDetailOverlay>div:nth-child(2) div>span:last-child {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#userDetailOverlay>div:nth-child(3) {
+  margin-top: 20px;
+}
+
+#userDetailOverlay>div:nth-child(3) p {
+  float: right;
+}
+
+#userDetailOverlay>div:nth-child(3) p:last-child {
+  padding-top: 10px;
+  margin-right: 20px;
 }
