--- a/app/css/app.css
+++ b/app/css/app.css
@@ -344,7 +344,7 @@ select#switchVersion {
 
 /*Table*/
 
-div#table {
+#table {
   width: 1165px;
   margin: 10px auto 0 auto;
   color: black;
@@ -383,6 +383,10 @@ div#table {
   font-size: 18px;
   font-weight: bold;
   padding-bottom: 5px;
+}
+
+#table .tableDivChild {
+  position: relative;
 }
 
 .tableDiv thead {
@@ -433,22 +437,43 @@ table img.wrong {
   height: 15px;
 }
 
-#table1 tbody tr td:nth-child(1),
+#table1 tbody tr td:nth-child(2),
 #table2 tbody tr td:nth-child(2),
 #table3 tbody tr td:nth-child(1),
-#table4 tbody tr td:nth-child(1),
+#table4 tbody tr td:nth-child(2),
 #table6 tbody tr td:nth-child(2) {
   color: #4178BE;
   cursor: pointer;
   white-space: nowrap;
 }
 
-#table1 tbody tr td:nth-child(1):hover,
+#table1 tbody tr td:nth-child(2):hover,
 #table2 tbody tr td:nth-child(2):hover,
 #table3 tbody tr td:nth-child(1):hover,
-#table4 tbody tr td:nth-child(1):hover,
-#table6 tbody tr td:nth-child(1):hover {
+#table4 tbody tr td:nth-child(2):hover,
+#table6 tbody tr td:nth-child(2):hover {
   text-decoration: underline;
+}
+
+#table p.emailUsers {
+  position: absolute;
+  left: 220px;
+  top: -10px;
+  z-index: 100;
+}
+
+#table p.emailUsers button.disabled {
+  background-color: #ececec;
+  border: 2px solid #ececec;
+  color: #777677;
+}
+
+#table1 thead tr th:nth-child(1),
+#table2 thead tr th:nth-child(1),
+#table4 thead tr th:nth-child(1),
+#table6 thead tr th:nth-child(1) {
+  width: 14px;
+  text-align: center;
 }
 
 
@@ -459,32 +484,41 @@ table img.wrong {
   vertical-align: middle;
 }
 
-#table1 tbody tr td:nth-child(1) {
-  max-width: 260px;
+#table1 tbody tr td:nth-child(2) span {
+  display: inline-flex;
+  max-width: 177px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-#table1 tbody tr td:nth-child(4),
+#table1 tbody tr td {
+  white-space: nowrap;
+}
+
 #table1 tbody tr td:nth-child(5),
-#table1 tbody tr td:nth-child(7),
+#table1 tbody tr td:nth-child(6),
 #table1 tbody tr td:nth-child(8),
 #table1 tbody tr td:nth-child(9),
-#table1 tbody tr td:nth-child(10) {
+#table1 tbody tr td:nth-child(10),
+#table1 tbody tr td:nth-child(11),
+{
   text-align: center;
   white-space: nowrap;
 }
 
-#table1 tbody tr td:nth-child(2),
 #table1 tbody tr td:nth-child(3),
-#table1 tbody tr td:nth-child(6) {
+#table1 tbody tr td:nth-child(4),
+#table1 tbody tr td:nth-child(7) {
   text-align: right;
   white-space: nowrap;
 }
 
-#table1 tbody tr td:nth-child(6) {
+#table1 tbody tr td:nth-child(7) {
   min-width: 80px;
 }
 
-#table1 tbody tr td:nth-child(7) {
+#table1 tbody tr td:nth-child(8) {
   max-width: 110px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -526,18 +560,6 @@ table img.wrong {
   margin-right: 20px;
 }
 
-#table2 p.emailUsers {
-  position: absolute;
-  left: 720px;
-  top: -50px;
-}
-
-#table2 p.emailUsers button.disabled {
-  background-color: #ececec;
-  border: 2px solid #ececec;
-  color: #777677;
-}
-
 
 /*table3*/
 
@@ -564,14 +586,6 @@ table img.wrong {
 
 
 /*table6*/
-#table6 {
-  position: relative;
-}
-
-#table6 thead tr th:nth-child(1){
-  width: 14px;
-  text-align: center;
-}
 
 #table6 thead tr th:nth-child(3),
 #table6 thead tr th:nth-child(4),
@@ -587,19 +601,6 @@ table img.wrong {
 #table6 tbody tr td:nth-child(7),
 #table6 tbody tr td:nth-child(6) {
   text-align: center;
-}
-
-#table6 p.emailUsers {
-  position: absolute;
-  left: 220px;
-  top: -10px;
-  z-index: 100;
-}
-
-#table6 p.emailUsers button.disabled {
-  background-color: #ececec;
-  border: 2px solid #ececec;
-  color: #777677;
 }
 
 .hoverTDiv {
