fix the margin-right value for the ninth card

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -177,7 +177,8 @@ div.card.myTable {
 }
 
 div.card:nth-child(4),
-div.card:nth-child(7) {
+div.card:nth-child(7),
+div.card:nth-child(10) {
   margin-right: 0;
 }
 
