--- a/app/css/app.css
+++ b/app/css/app.css
@@ -691,6 +691,16 @@ table img.wrong {
   background-color: #FF6D3A;
 }
 
+.tableDiv.card9 .hoverTDiv {
+  background-color: #FF6D3A;
+}
+.tableDiv.card10 .hoverTDiv {
+  background-color: #FF6D3A;
+}
+.tableDiv.card10 .hoverTDiv {
+  background-color: #FF6D3A;
+}
+
 .tableDiv #table1 {
   display: none;
 }
